# farmbotsim-rs

./: .gitignore  Cargo.toml  README.md
analyze/: output.json  (+1 more)
crates/farmbotsim-app/: Cargo.toml  README.md
crates/farmbotsim-app/src/: main.rs
crates/farmbotsim-app/src/app_module/: app.rs  app_mode.rs  mod.rs
crates/farmbotsim-app/src/rendering/: camera.rs  mod.rs  render.rs
crates/farmbotsim-app/src/tool_module/: agent_config_editor_tool.rs  battery_tool.rs  farm_entity_plan_editor_tool.rs  field_config_editor_tool.rs  general_help_tool.rs  has_camera.rs  has_config_saving.rs  has_env.rs  has_env_controls.rs  has_help.rs  mod.rs  movement_config_editor_tool.rs  path_tool.rs  performance_matrix_tool.rs  scene_config_editor_tool.rs  simulation_tool.rs  task_manager_config_editor_tool.rs  task_tool.rs
crates/farmbotsim-app/src/utilities/: files.rs  ui.rs
crates/farmbotsim-core/: Cargo.toml  README.md
crates/farmbotsim-core/src/: cfg.rs  lib.rs  logger.rs  prelude.rs  statistics.rs
crates/farmbotsim-core/src/agent_module/: agent_config.rs  mod.rs  work_schedule.rs
crates/farmbotsim-core/src/battery_module/: battery.rs  battery_config.rs  battery_error.rs  is_battery.rs  mod.rs
crates/farmbotsim-core/src/environment/: datetime.rs  field_config.rs  mod.rs  obstacle.rs  scene_config.rs
crates/farmbotsim-core/src/movement_module/: is_movement.rs  mod.rs  movement.rs  pose.rs  romba_movement.rs
crates/farmbotsim-core/src/path_finding_module/: mod.rs  path_finding.rs  visibility_graph.rs
crates/farmbotsim-core/src/task_module/: mod.rs  strategies.rs  task.rs  task_manager.rs  task_manager_config.rs
(+190 files in other folders)
