[workspace]
members = [
    "crates/farmbotsim-core",
    "crates/farmbotsim-app",
    "crates/farmbotsim-analysis"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

# Shared dependencies across crates
[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
once_cell = "1.21.3"
enum-iterator = "2.1.0"
plotters = "0.3.7"
petgraph = "=0.8.1"
egui = { version = "0.31.1", features = ["persistence"] }
